--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ esp-idf-hal = { version = "0.41", default-features = false, features = ["esp-idf
 embassy-sync = { version = "0.2", optional = true }
 embassy-time = { version = "0.1.3", optional = true, features = ["tick-hz-1_000_000"] }
 embassy-futures = "0.1"
+memchr = "2.5.0"
 
 [build-dependencies]
 embuild = "0.31.3"
@@ -79,3 +80,6 @@ name = "json_post_handler"
 
 [[example]]
 name = "ws_guessing_game"
+
+[patch.crates-io]
+embedded-svc = { path = "../embedded-svc" }
