--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ esp-idf-sys = { version = "0.32.1", default-features = false, features = ["nativ
 esp-idf-hal = { version = "0.40", default-features = false, features = ["esp-idf-sys"] }
 embassy-sync = { version = "0.1", optional = true }
 embassy-time = { version = "0.1", optional = true, features = ["tick-hz-1_000_000"] }
+memchr = "2.5.0"
 
 [build-dependencies]
 embuild = "0.31"
@@ -42,3 +43,6 @@ anyhow = "1"
 [[example]]
 name = "http_request"
 required-features = ["experimental"]
+
+[patch.crates-io]
+embedded-svc = { path = "../embedded-svc" }
